[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["“Gutto <“guttolaudie@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
isort = "^5.13.2"
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
